# cscs-tools

./: LICENSE  README.md  pyproject.toml  setup.py  version.json  version_sample.py
sample/: version_sample.py
sample/logger/: .env  README.md  log_config.py  logger_sample.py  subrocess.py  task.py
sample/mail/: README.md  cscs_sendmail_cli.md  mail_sample.py  test_email.html
sample/version/: README.md  my_version.txt  version_sample.py
src/cscs_tools.egg-info/: PKG-INFO
src/cscs_tools/logger/services/: logger_service.py
src/cscs_tools/mail/: cli.py
src/cscs_tools/mail/enums/: security_mode.py
src/cscs_tools/mail/services/: mail_service.py
src/cscs_tools/version/repositories/: version_file_repository.py
src/cscs_tools/version/services/: version_service.py
