[project]
name = "cscs-tools"
version = "0.0.6"
description = "Utilities library"
authors = [
    { name = "Csaba Cselko", email = "lendoo73dev@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = []

[project.scripts]
cscs-sendmail = "cscs_tools.mail.cli:main"

[project.urls]
Homepage = "https://github.com/lendoo73/cscs-tools"
Repository = "https://github.com/lendoo73/cscs-tools"
Issues = "https://github.com/lendoo73/cscs-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"